--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,23 +1,42 @@
-name: Wired Brain Pipeline
+name: Wired Brain Workflow
 
 on:
+  workflow_dispatch:
   push:
     branches: ['main']
-  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: 8.0.x
-      
-      - name: Restore Dependencies
-        run: dotnet restore
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 8.0.x
 
-      - name: Build
-        run: dotnet build --no-restore
+    - name: Restore Dependencies
+      run: dotnet restore
+
+    - id: build
+      name: Build
+      run: dotnet build --no-restore
+
+    - id: test
+      if: steps.build.outcome == 'success'
+      name: Test
+      run: dotnet test "WiredBrain.Tests/WiredBrain.Tests.csproj" --collect "XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=cobertura
+
+    - id: coverage
+      name: Code Coverage Report
+      uses: irongut/CodeCoverageSummary@v1.3.0
+      with:
+        filename: WiredBrain.Tests/TestResults/**/coverage.cobertura.xml
+        badge: false
+        fail_below_min: false
+        hide_branch_rate: false
+        hide_complexity: true
+        indicators: true
+        output: console
